2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* ManagedXslTransform.cs : Transform() should raise an error if no 
	  stylesheet was loaded.

2003-10-04  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslTransformImpl.cs : Load(url, resolver) now uses XPathDocument
	  .ctor(url, xmlSpace).

2003-08-30 Oleg Tkachenko <oleg@tkachenko.com>
	* ManagedXslTransform.cs: Outputter/Emitter selection logic is moved 
	to GenericOutputter.

2003-08-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: commented out Cleanup () because of bug #47776.

2003-08-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Multiplexer.cs: fixed infinite recursion bug.

2003-08-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs: sync API (Oleg).

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs: sync to API changes.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs, XslTransformImpl.cs: Add support for
	encoding.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* *.cs: Support for xsl:output. (Oleg)

2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslTransformImpl.cs: close XmlTextWriter when we create it.

2003-08-14  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslTransformImpl.cs, XslTransform.cs, Multiplexer.cs,
	  ManagedXslTransform.cs : Added Evidence args introduced in .NET 1.1.

2003-08-11  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* XsltCompileException.cs: Fixed/ Implemented rest
	* XsltException.cs: Added internal constructor

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs: use the resolver given.

2003-07-30 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs: Hold reference to CompiledStyle, not the
	XslTransformProcessor. Will help with thread safty.

2003-07-30 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ManagedXslTransform.cs: remove verbose debugging messages
