@@ -45,9 +45,16 @@ namespace System.Xml.Xsl {
 
 		public override void Transform (XPathNavigator input, XsltArgumentList args, TextWriter output, XmlResolver resolver) {
 			Outputter outputter = new GenericOutputter(output, s.Outputs);			
-			outputter.WriteStartDocument();
+//			outputter.WriteStartDocument();
 			new XslTransformProcessor (s).Process (input, outputter, args, resolver);
-			outputter.WriteEndDocument();
+			switch (outputter.WriteState) {
+			case WriteState.Start:
+			case WriteState.Closed:
+				break;
+			default:
+				outputter.WriteEndDocument();
+				break;
+			}
 			output.Flush ();
 		}
 		
